--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,10 +23,10 @@ test_script:
   # run tests
   # npm test
   #- ./node_modules/.bin/jasmine
-  #- ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport --output=\testresults
-  - node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport
-  #- ps: $wc = New-Object 'System.Net.WebClient'
-  #- ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\testresults/results.xml))
+  - node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport --output=./testresults
+  #- node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport
+  - ps: $wc = New-Object 'System.Net.WebClient'
+  - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path ./testresults/results.xml))
 
 # Don't actually build.
 build: off
