--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ environment:
   matrix:
     # node.js
     - nodejs_version: "9"
+  COVERALLS_REPO_TOKEN:
+    secure: kYz4NKVvFSFDG4VhIx5uYg==
 
 # Install scripts. (runs after repo cloning)
 install:
