--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ test_script:
 
 after_test:
   #- node ./node_modules/coveralls/bin/coveralls.js < ./coverage/lcov.info 
-  - ./node_modules/.bin/istanbul cover --report lcov ./node_modules/.bin/jasmine
+  #- ./node_modules/.bin/istanbul cover --report lcov ./node_modules/.bin/jasmine
   
 # Don't actually build.
 build: off
