--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ test_script:
 after_test:
   #- node ./node_modules/coveralls/bin/coveralls.js < ./coverage/lcov.info 
   #- ./node_modules/.bin/istanbul cover --report lcov ./node_modules/.bin/jasmine
-  - ./node_modules/.bin/istanbul cover ./node_modules/.bin/jasmine
+  - ./node_modules/.bin/istanbul cover --report lcov ./node_modules/jasmine/bin/jasmine.js
   
 # Don't actually build.
 build: off
