--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,6 +31,8 @@ test_script:
   #- node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport
   - ps: $wc = New-Object 'System.Net.WebClient'
   - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path ./testresults/results.xml))
+  - ps: $temp = "https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path ./testresults/results.xml)
+  - ps: Host-Write $temp
 
 after_test:
   #- node ./node_modules/coveralls/bin/coveralls.js < ./coverage/lcov.info 
