--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: node_js
 
+before_script:
+  - npm install
+  - npm install --save-dev jasmine
+  - ./node_modules/.bin/jasmine init
+  - npm install --save-dev jasmine-xml-reporter
+  - npm install --save-dev karma
+  - npm install --save-dev karma-coverage
+  - npm install -save--dev coveralls
+
+script:
+  - node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport --output=./testresults
+
 
